--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ notes/*
 .ipynb_checkpoints/*
 .vscode/*
 venv/*
+data/raw/*
+data/processed/*/*.jpg
+data/processed/*/*.jpeg
+data/processed/*/*.png
